Ajout de google Search Console
Pour la visibilité dans la recherche

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<script src="./assets/scripts.js"></script>
 	
 	<title>Nina Carducci Photographe</title>
-	<meta name="google-site-verification" content="bID2Sfx9yTgd_FXfBiA1oJQ7eNCSDs4srqh_ul5TXR4">
+	<meta name="google-site-verification" content="bID2Sfx9yTgd_FXfBiA1oJQ7eNCSDs4srqh_ul5TXR4" />
 	<meta name="google-site-verification" content="googlee4c25a59431d5937.html">
 	<meta name="keyword" content="Nina Carducci, photographe, photographie, mariage, entreprise, portrait, Bordeaux">
 	<meta name="description" content="Nina Carducci, photographe pro à Bordeaux. Passionnée par mon art, je capture les moments précieux pour des souvenirs intemporels. Mariage, famille, entreprise.">
