Modification des liens dans index.html

--- a/index.html
+++ b/index.html
@@ -26,36 +26,36 @@
 	<meta name="twitter:creator" content="ninacarducci">
 	<meta name="twitter:title" content="Nina Carducci Photographe">
 	<meta name="twitter:description" content="Nina Carducci, photographe pro à Bordeaux. Passionnée par mon art, je capture les moments précieux pour des souvenirs intemporels. Mariage, famille, entreprise.">
-	<meta name="twitter:image" content="https://meeifox.github.io/npo-nina-carducci.github.io/assets/images/nina.jpg">
+	<meta name="twitter:image" content="https://meeifox.github.io/nina-carducci/assets/images/nina.jpg">
 	
 	<!-- méta Open Graph (og)  -->
 	<meta property="og:locale" content="fr_FR" />
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Nina Carducci">
 	<meta property="og:description" content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer">
-	<meta property="og:image" content="https://meeifox.github.io/npo-nina-carducci.github.io/assets/images/nina.jpg">
-	<meta property="og:url" content="https://meeifox.github.io/npo-nina-carducci.github.io">
+	<meta property="og:image" content="https://meeifox.github.io/nina-carducci/assets/images/nina.jpg">
+	<meta property="og:url" content="https://meeifox.github.io/nina-carducci">
 	
 	<!-- Rich Snippet -->
 	<meta itemprop="jobTitle" content="Photographe"/>
 	<meta itemprop="address" content="68 avenue Alsace-Lorraine">
 	<meta itemprop="jobLocation" content="Bordeaux, France"/>
-	<meta itemprop="url" href="https://meeifox.github.io/npo-nina-carducci.github.io"/>
+	<meta itemprop="url" href="https://meeifox.github.io/nina-carducci"/>
 	<meta itemprop="email" content="contact@ninacarducci.com" />
 	<meta itemprop="telephone" content="+33 5 56 67 78 89" />
-	<meta itemprop="image" content="https://meeifox.github.io/npo-nina-carducci.github.io/assets/images/nina.jpg"/>
+	<meta itemprop="image" content="https://meeifox.github.io/nina-carducci/assets/images/nina.jpg"/>
 	<link itemprop="sameAs" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" />
 	<script type="application/ld+json">
 		{
 			"@context": "https://schema.org",
 			"@type": "LocalBusiness",
 			"image": [
-			  "https://meeifox.github.io/npo-nina-carducci.github.io/assets/images/nina.jpg",
-			  "https://meeifox.github.io/npo-nina-carducci.github.io/assets/images/camera.jpg",
-			  "https://meeifox.github.io/npo-nina-carducci.github.io/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg"
+			  "https://meeifox.github.io/nina-carducci/assets/images/nina.jpg",
+			  "https://meeifox.github.io/nina-carducci/assets/images/camera.jpg",
+			  "https://meeifox.github.io/nina-carducci/assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg"
 			],
 			"name": "Nina Carducci",
-			"url": "https://meeifox.github.io/npo-nina-carducci.github.io/",
+			"url": "https://meeifox.github.io/nina-carducci/",
 			"telephone": "+33 5 56 67 78 89",
 			"address": {
 			  "@type": "PostalAddress",
@@ -90,7 +90,7 @@
 			"@type": "ImageObject",
 			"contentUrl": "./assets/images/nina-carducci-photo.jpg",
 			"license": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
-			"acquireLicensePage": "https://meeifox.github.io/npo-nina-carducci.github.io",
+			"acquireLicensePage": "https://meeifox.github.io/nina-carducci",
 			"creditText": "Portrait",
 			"creator": {
 			  "@type": "Person",
@@ -103,7 +103,7 @@
 		  "@type": "ImageObject",
 		  "contentUrl": "./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg",
 		  "license": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
-		  "acquireLicensePage": "https://meeifox.github.io/npo-nina-carducci.github.io",
+		  "acquireLicensePage": "https://meeifox.github.io/nina-carducci",
 		  "creditText": "Homme en costume sur un passage piedton",
 		  "creator": {
 			"@type": "Person",
@@ -116,7 +116,7 @@
 			"@type": "ImageObject",
 			"contentUrl": "./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg",
 			"license": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
-			"acquireLicensePage": "https://meeifox.github.io/npo-nina-carducci.github.io",
+			"acquireLicensePage": "https://meeifox.github.io/nina-carducci",
 			"creditText": "Foule heureux",
 			"creator": {
 			  "@type": "Person",
@@ -129,7 +129,7 @@
 			"@type": "ImageObject",
 			"contentUrl": "./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg",
 			"license": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
-			"acquireLicensePage": "https://meeifox.github.io/npo-nina-carducci.github.io",
+			"acquireLicensePage": "https://meeifox.github.io/nina-carducci",
 			"creditText": "Couple de mariés qui dansent et s'embrassent",
 			"creator": {
 			  "@type": "Person",
